# finite_elliptic_algebra

./: .gitignore  LICENSE  pyproject.toml
.devcontainer/: devcontainer.json
elliptic_algebra/: __init__.py  finite_elliptics.py  finite_fields.py  finite_groups.py  utils.py
examples/: char_plot.py  demo.py  table_generator.py
notebooks/: point_checking.ipynb
output/: GF(11^2).csv  GF(17^2).csv  GF(5^1).csv  GF(5^2).csv  GF(7^1).csv  GF(7^2).csv  GF(7^3).csv
src/: gf.py  notebook.ipynb  polynomial.py  prime.py
src/elliptic-algebra/: README.md
src/elliptic-algebra/elliptic_curve/: curve.py
src/elliptic-algebra/examples/points_on_singular_curves/: GF(11^1).csv  GF(13^1).csv  GF(13^2).csv  GF(19^2).csv  GF(5^3).csv
src/elliptic-algebra/finite_field/: abelian.py  cyclic.py  field.py
src/elliptic-algebra/utils/: helpers.py
src/elliptic_algebra.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
