[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "elliptic_algebra"
version = "0.1.0"
description = "Elliptic Algebra"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
dependencies = [
]

[project.optional-dependencies]
dev = [
]